Fixing the other calculators with the unit issue. Also add the populateUnitCombobox to the kalzium utils

BUG: 241530